fix(ui): stop progress bar jumping

--- a/src/app/ui/progress-bar/progress-bar.component.scss
+++ b/src/app/ui/progress-bar/progress-bar.component.scss
@@ -5,7 +5,7 @@
   z-index: 200;
 
   .filled {
-    transition: all .33s cubic-bezier(.6, -0.61, .49, 1.49);
+    transition: all .33s ease;
   }
 }
 
